--- a/src/components/pages/Quote.css
+++ b/src/components/pages/Quote.css
@@ -7,10 +7,8 @@
   height: 80vh;
   padding: 15rem;
   gap: 5rem;
-
-  background-color: #3AAFA9;
+  background-color: #3aafa9;
   min-height: 100vh;
-
   font-family: 'Inter', sans-serif;
 }
 
