--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -4,11 +4,9 @@
   flex-direction: column;
   gap: 5rem;
   min-height: 100vh;
-
-  background-color: #3AAFA9;
+  background-color: #3aafa9;
   color: #000;
-
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
 }
 
 .title {
